[package]
name = "todo"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"


# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "postgres",
] } # DB libswarp = "0.3"# Web libs
sqlb = "0.4.0"
